# gnssmapper

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  example.py  pyproject.toml  readme.md  readme.rst  requirements.txt  run.py  setup.cfg  setup.py
algorithms/: FPL.py  MapAlgorithm_2.py  mapAlgo.py
data/configs/: 20201117_model_signal.yaml  20201117_rec.yaml  template.yaml  test.yaml
data/map/: box.txt  east.txt  north.txt  poly_donut_side_20_width_1.txt  poly_donut_side_50_width_1.txt  south.txt  west.txt
docs/: conf.py  getting_started.rst  index.rst  manual.rst  requirements.txt
docs/getting_started/: installation.rst  tutorial.py  tutorial.rst
docs/manual/: api_reference.rst  user_guide.rst
exampleFiles/: pseudoranges_log_2016_08_22_14_45_50.txt.html
examplefiles/: gnss_log_2020_02_11_08_49_29.txt  mastermap-topo_3473984_0.gml
experiment/configs/: 20201117_algo_intersections.yaml  20201117_rec.yaml
gnssmapper/: __init__.py  constants.py  core.py  geo.py  log.py  map.py  observations.py  raw.py  run.py  satellitedata.py  sim.py  todo.txt
map/: canyon.txt  map.py
samplesize/: main.py
simulator/: config.yaml  gnss.py  gnss_data.py  map.py  receiver.py  svid_location.py  svid_location_deprecated.py
src/: FourParamLR.py  MapAlgorithm.py  MapAlgorithm_2.py  gnss.py  main.py  map.py  orchestration.py  receiver.py  svid_location.py
tests/: test_FourParamLR.py  test_geo.py  test_log.py  test_map.py  test_measurements  test_observations.py  test_processed_measurements  test_raw.py  test_satellitedata.py  test_sim.py
tests/map/: test_map.py
(+38 files in other folders)
