[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[tool.black]
exclude = '''
/(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | venv
      | _build
      | buck-out
      | build
      | dist
      | docs

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
'''
