[metadata]
# replace with your username:
name = gnssmapper
version = 0.0.1a6
author = Terry Lines
author_email = terence.lines@glasgow.ac.uk
description = A package for generating 3D maps from gnss data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/TerryLines/gnssmapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    geopandas>=0.8
    pygeos>=0.9
    scipy
    numpy
    shapely
    pyproj>=2.2

[options.packages.find]
exclude = test*

